--- a/welcome-style.css
+++ b/welcome-style.css
@@ -121,3 +121,7 @@ footer {
     position: relative;
     bottom: 0;
 }
+
+body, html {
+    overflow-x: hidden;
+}
